[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmpcpwa"
version = "0.0.1"
authors = [
  { name="Samuel Mallick", email="sam.mallick.97@gmail.com" },
]
description = "Distributed Model Predictive Control for Piecewise Affine Systems"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "csnlp>=1.5.7",
    "mpcrl>=1.1.7",
    "numpy>=1.24.4",
    "casadi>=3.6.3",
    "scipy>=1.11.2",
    "gymnasium>=0.28.1",
    "matplotlib>=3.7.3",
    "gurobipy>=10.0.3",
    "dmpcrl>=1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/SamuelMallick/distributed-mpc-pwa"

[tool.setuptools]
license-files = [
	"LICENSE",
]

[tool.isort]
profile = "black"
